3rd correction of robot position on mobile

--- a/4. (6) joke-teller/less/style.less
+++ b/4. (6) joke-teller/less/style.less
@@ -60,6 +60,7 @@ body {
       flex-flow: column nowrap;
       justify-content: flex-end;
       padding-bottom: 13vh;
+      padding-left: 0;
     }
   }
 }
